style.css
* {
    margin: 0;
    border: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    line-height: 1.5em;
}


.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

nav,
footer {
/*    padding: 0.5% 0;*/
    background-color: #483C46;
    font-family: 'Poppins', sans-serif;
    color: #F4743B;
}

h1,
h2,
h3 {
    font-family: 'Poppins', sans-serif;
}


h2 {
   font-size: 2.3rem;
 padding-bottom: 3%;
}

h3 {
    padding-bottom: 5%;
    font-size: 2rem;
    color: #F4743B;
}

p {
    text-align: left;
}


/*NAV*/
nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;

}

nav > .content {
    width: 80%;
    height: 70px;
    margin: 0 auto;
}

div#nav-logo {
    display: inline-block;
    width: 20px;
    margin-top: 15px;
    font-size: 2rem;
}

div#nav-logo a {
    text-decoration: none;
    color: #F4743B;
}

ul#nav-links {
    float: right;
    margin-top: 25px;
    margin-right: 40px;
}

ul#nav-links li{
    display: inline-block;
    margin-left: 32px;
}

ul#nav-links li a{
    text-decoration: none;
    color: #F4743B;
}

ul#nav-links li a:hover {
    color: #fbcbb7;
}


/*HEADER*/
header {
    font-family: 'Poppins', sans-serif;
    padding: 12% 0;
    width: 80%;
    margin: auto;
}

div#header-title {
    margin: auto;
    margin-top: 3%;
}

p.header-description {
    font-size: 1.5rem;
    line-height: 2rem;
    color: #483C46;
    padding-top: 2%
}

p#header-p {
   line-height: 3.7rem;
    font-size: 5rem;
    color: #3C6E71
}

p#header-p span {
    color: #F4743B;
    font-size: 10rem;
    z-index: -1;
    position: absolute
}

span.bold {
    font-weight: 800;
}

section {
    min-height: 350px;
    padding: 6% 0;
    margin: auto;
    text-align: center;
}

/*About me section*/

section#about-me-section {
    color: #fff;
    background-color: #483C46;
    width: 90%;
    min-height: 500px;
}

p#am-section-header {
    font-size: 4.5rem;
    color: #F4743B;
    font-family: 'Poppins', sans-serif;
    margin-left: 60px;
}

div#about-me-group {
    margin: auto;
    width: 90%;
}

div#profile-img{
    display: inline-block;
    width: 50%;
    float: right;
}

img#profile-pic {
    width: 100%
}

div#profile-deets {
    display: inline-block;
    width: 50%;
    vertical-align: top;
}

p.about-me {
   margin-top: 20px;
    color: #fff;
        font-size: 1.3rem
}


/*skills section. WILL ADD LATER*/

/*
section#skills-section {
    background-color: #3C6E71;
}

div#skills-img img{
    display: inline-block;
    width: 20%;
}
*/

/*Projects section*/
section#project-section {
    background-image: url(images/ContourBackground.png);
    background-attachment: fixed;
    background-color: #fff;
    color: #3C6E71;
}

div#upbeat-atlas-app,
#sustain-app,
#commute-calculator-app {
  margin-top: 10%;
}

div.project-img {
    width: 45%;
    display: inline-block;
}

img.project-screenshot{
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 10px;
}

div.project-info {
    width: 40%;
    display: inline-block;
    vertical-align: top;
}

div.project-info p {
    vertical-align: top;
    color: #3C6E71;
    font-size: 1.3rem;
}

div.tech-image img {
    width: 10%;
}

button.project-links {
    width: 10%;
    padding: 1%;
    margin-top: 1%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 5px;
    background-color: #3C6E71;
}

button.project-links:hover {
    background-color: #468286;
}

button.project-links a {
    text-decoration: none;
    color: black;
    font-size: 1rem;
    color: #fff;
}

/*contact*/
section#contact-section {
    min-height: 500px;
    background-color: #fff;
}

div#contact-info {
    background-color: #3C6E71;
    width: 60%;
    margin:auto;
    padding: 3%;
    text-align: center;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

div#contact-info p {
    margin: auto;
    padding-top: 1%;
    width: 80%;
    font-size: 1.5rem;
    color: white;
}

div#social-img {
    width: 30%;
    margin: auto;
}

img.social-button {
    margin-top: 20px;
    background-color: #F4743B;
    width: 15%;
    border-radius: 50%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@media only screen and (max-width: 800px) {

    /*    OVERALL*/

    section {
        padding: 20% 0;
        margin-top: 10%;
    }

    /*NAV*/
    div#nav-logo {
        font-size: 1.6rem;
        line-height: 1.3rem
    }

    ul#nav-links {
        margin-right: 15px;
    }

    ul#nav-links li{
        margin-left: 20px;
    }

    /*    HEADER*/

    header {
        padding-top: 90px;
        width: 80%;
    }

    div#header-title {
        margin-top: 60px;
    }

    p.header-description {
        font-size: 1.3rem;
        line-height: 1.5rem;
        padding-top: 20px;
    }

    p#header-p {
        line-height: 3.2rem;
        font-size: 4rem;
    }

    p#header-p span {
        font-size: 8rem;
    }

    /*ABOUT ME*/

    section#about-me-section {
        width: 100%;
    }

    p#am-section-header {
        font-size: 2.8rem;
        text-align: left;
    }

    div#about-me-group {
        margin: auto;
        width: 85%;
    }

    div#profile-img{
        display: block;
        width: 95%;
        margin-top: -15px;
    }

    img#profile-pic {
        width: 100%;
        margin: auto;

    }

    div#profile-deets {
        display: block;
        width: 100%;
    }

    p.about-me {
        font-size: 1.2rem
    }

    /*    Projects section*/

    div.project-img {
        width: 90%;
        display: block;
        margin: auto;
        margin-bottom: 25px;
        margin-top: 25px

    }

    img.project-screenshot{
        width: 90%;
    }

    div.project-info {
        width: 85%;
        display: inline-block;
        vertical-align: top;
    }

    div.project-info p {
        font-size: 1.2rem;
    }

    button.project-links {
        width: 20%;
        padding: 3%;
    }

    /*    CONTACT*/

    section#contact-section {
        min-height: 400px;
    }

    div#contact-info {
        width: 80%;
        margin-top: 20px;
        padding: 5%;
    }

    div#contact-info p {
        width: 90%;
        font-size: 1.3rem;
    }

    div#social-img {
        width: 70%;
    }
}


@media only screen and (max-width: 640px) {

/*    OVERALL*/

    section {
        padding: 15% 0;
    }

/*NAV*/
    div#nav-logo {
        font-size: 1.8rem;
        line-height: 1.5rem;
    }

    ul#nav-links {
        margin-right: 15px;
    }

    ul#nav-links li{
        margin-left: 20px;
    }

/*    HEADER*/

    header {
        padding-top: 90px;
        width: 80%;
    }

    div#header-title {
        margin-top: 60px;
    }

    p.header-description {
        font-size: 1.3rem;
        line-height: 1.5rem;
        padding-top: 20px;
    }

    p#header-p {
        line-height: 3.2rem;
        font-size: 4rem;
    }

    p#header-p span {
        font-size: 8rem;
    }

/*ABOUT ME*/

    section#about-me-section {
        width: 100%;
    }

    p#am-section-header {
        font-size: 2.8rem;
        text-align: left;
    }

    div#about-me-group {
        margin: auto;
        width: 85%;
    }

    div#profile-img{
        display: block;
        width: 95%;
        margin-top: -15px;
    }

    img#profile-pic {
        width: 100%;
        margin: auto;

    }

    div#profile-deets {
        display: block;
        width: 100%;
    }

    p.about-me {
        font-size: 1.2rem
    }

/*    Projects section*/

    div.project-img {
        width: 90%;
        display: block;
        margin: auto;
        margin-bottom: 25px;
        margin-top: 25px

    }

    img.project-screenshot{
        width: 90%;
    }

    div.project-info {
        width: 85%;
        display: inline-block;
        vertical-align: top;
    }

    div.project-info p {
        font-size: 1.2rem;
    }

    button.project-links {
        width: 20%;
        padding: 3%;
    }

/*    CONTACT*/

    section#contact-section {
        min-height: 400px;
    }

    div#contact-info {
        width: 80%;
        margin-top: 20px;
        padding: 5%;
    }

    div#contact-info p {
        width: 90%;
        font-size: 1.3rem;
    }

    div#social-img {
        width: 70%;
    }
}

@media only screen and (max-width: 480px) {

    /*    OVERALL*/

    section {
        padding: 15% 0;
    }

    /*NAV*/
    div#nav-logo {
        font-size: 1.2rem;
        line-height: 1.5rem;
    }

    ul#nav-links {
        margin-left: 60px;
    }

    ul#nav-links li{
        margin-left: 30px;
    }

    ul#nav-links li a{
        font-size: 0.8rem;
        padding-right: 5px;
    }

    /*    HEADER*/

    header {
        padding-top: 90px;
        width: 80%;
    }

    div#header-title {
        margin-top: 60px;
    }

    p.header-description {
        font-size: 1rem;
        line-height: 1.5rem;
        padding-top: 20px;
    }

    p#header-p {
        line-height: 3.2rem;
        font-size: 3rem;
    }

    p#header-p span {
        font-size: 6rem;
    }

    /*ABOUT ME*/

    section#about-me-section {
        width: 100%;
    }

    p#am-section-header {
        font-size: 2.8rem;
        text-align: left;
    }

    div#about-me-group {
        margin: auto;
        width: 85%;
    }

    div#profile-img{
        display: block;
        width: 95%;
        margin-top: -15px;
    }

    img#profile-pic {
        width: 100%;
        margin: auto;

    }

    div#profile-deets {
        display: block;
        width: 100%;
    }

    p.about-me {
        font-size: 1.2rem
    }

    /*    Projects section*/

    div.project-img {
        width: 90%;
        display: block;
        margin: auto;
        margin-bottom: 25px;
        margin-top: 25px

    }

    img.project-screenshot{
        width: 90%;
    }

    div.project-info {
        width: 85%;
        display: inline-block;
        vertical-align: top;
    }

    div.project-info p {
        font-size: 1.2rem;
    }

    button.project-links {
        width: 20%;
        padding: 3%;
    }

    /*    CONTACT*/

    section#contact-section {
        min-height: 400px;
    }

    div#contact-info {
        width: 80%;
        margin-top: 20px;
        padding: 5%;
    }

    div#contact-info p {
        width: 90%;
        font-size: 1.3rem;
    }

    div#social-img {
        width: 70%;
    }
}

